# fpgen

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.mk  Makefile  README.md  conanfile.py
.github/worfklows/: hash.yml
.github/workflows/: c-cpp.yml  cpp-clang.yml  main.yml
docs/: doxygen.css  doxygen_footer.html  doxygen_header.html
inc/: __helpers.hpp  aggregators.hpp  fpgen.hpp  generator.hpp  manipulators.hpp  sources.hpp  stream.hpp  type_traits.hpp
test/: Makefile  conanfile.txt
test/src/: test_aggreg.cpp  test_chain.cpp  test_generator.cpp  test_main.cpp  test_manip.cpp  test_sources.cpp  test_stream.cpp
test/src/generator/: test_generator.cpp
test_package/: .gitignore  CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
